# ifcld

./: .gitignore  README.md  pyproject.toml
.github/workflows/: install.yml  lint.yml
src/ifcld/: __init__.py  cli.py  query.py  transformations.py  utils.py  visualization.py
src/ifcld/interpreters/: jsonld.py  namespaces.py  params.py
src/ifcld/metamodels/: __init__.py  building-smart.json  ifc-metamodel.json  prov.json
src/ifcld/parsers/ifc/: __init__.py  ifc4.offsets.json  ifc4.ordered.json
src/ifcld/parsers/p21/: Part21.py
